--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,10 @@ body {
 
 h1 {
     color: blue;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
